# swww_itch

./: .gitignore  Cargo.toml  Makefile  README.md  dev  index.html  package.json  vite.config.js
migrations/: 20250716124338_init.sql  20250722083006_day_night_queue.sql
src/: App.jsx  Dev.jsx  PickBackground.jsx  Queue.jsx  index.jsx
src-itch-lib/: Cargo.toml
src-itch-lib/src/: unix_socket.rs
src-itch-lib/src/unix_socket/: internal.rs
src-itch-shared/: Cargo.toml
src-itch-shared/src/: env_path.rs  lib.rs  message.rs  swww_ffi.rs  unix_socket.rs
src-itch-shared/src/unix_socket/: internal.rs  setup.rs
src-itchd/: Cargo.toml
src-itchd/src/: cleanup.rs  ipc.rs  main.rs  wallpaper_queue.rs
src-itchd/src/wallpaper_queue/: builder.rs  day_night.rs  iter.rs  persistence.rs  scheduler.rs
src-itchd/src/wallpaper_queue/day_night/: cron_job.rs  helper.rs
src-itchd/src/wallpaper_queue/persistence/: sqlite.rs
src-itchd/src/wallpaper_queue/persistence/sqlite/: table.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  swww_ffi.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/quick_switch/: mod.rs
src/components/: Background.jsx  Transition.jsx
src/context/: view.jsx
src/context/view/: Routing.js
