[package]
name = "swww-itchd"
version = "0.1.0"
edition = "2024"

[dependencies]
swww_itch_shared = { path = "../src-itch-shared" }
tokio.workspace = true
anyhow.workspace = true
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }

# console-subscriber = "0.4.1"
